--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <style>
+      model-viewer {
+        width: 400px;
+        height: 600px;
+      }
+
+    </style>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
